# CoreLibCPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
System.Drawing/: CHANGELOG.md  CMakeLists.txt
System.Drawing/build_test/: SystemDrawingConfig.cmake
System.Drawing/build_test/skia_external-prefix/tmp/: skia_external-cfgcmd.txt
System.Drawing/build_test/tests/: SystemDrawingTests[1]_include.cmake
System.Drawing/cmake/: SystemDrawingConfig.cmake.in
System.Drawing/examples/: CMakeLists.txt  backend_comparison.cpp  backend_selection_demo.cpp  basic_drawing.cpp  directx_specific.cpp  gdiplus_specific.cpp
System.Drawing/src/: Bitmap.cpp  Brush.cpp  FontFamily.cpp  Graphics.cpp  Pen.cpp  Point.cpp  Size.cpp
System.Drawing/src/DirectXBackend/: DirectXBackend.cpp
System.Drawing/src/GdiPlusBackend/: GdiPlusBackend.cpp  GdiPlusBackend.h  GdiPlusBitmap.cpp  GdiPlusFont.cpp  GdiPlusImage.cpp
System.Drawing/src/Imaging/: ImageFormat.cpp  PixelFormat.cpp
System.Drawing/src/SkiaBackend/: SkiaBackend.cpp  SkiaBackend.h  SkiaFont.cpp  SkiaGraphics.cpp
System.Drawing/tests/: CMakeLists.txt  test_backend_selection.cpp  test_color.cpp  test_directx_backend.cpp  test_gdiplus_backend.cpp  test_graphics.cpp  test_point.cpp  test_rectangle.cpp  test_size.cpp
examples/: AsyncLocalExample.cpp  BarrierExample.cpp  CMakeLists.txt  CancellationTokenExample.cpp  CountdownEventExample.cpp  ReaderWriterLockSlimExample.cpp  TaskExample.cpp  ThreadLocalExample.cpp
include/: CompilerCompat.hpp
include/CoreLib/: All.h  Base.h  Collections.h  IO.h  Reflection.h  Threading.h
include/System/: ApplicationException.h  ArgumentException.h  ArgumentNullException.h  ArgumentOutOfRangeException.h  Array.h  Boolean.h  Byte.h  Char.h  DateTime.h  DateTimeOffset.h  DayOfWeek.h  Decimal.h  Delegate.h  DelegateReflection.h  DivideByZeroException.h  Double.h  Enum.h  Event.h  EventArgs.h  Exception.h  FileAttributes.h  FormatException.h  GC.h  Guid.h  IndexOutOfRangeException.h  Int16.h  Int32.h  Int64.h  IntPtr.h  InvalidOperationException.h  NotImplementedException.h  NotSupportedException.h  NullReferenceException.h  Nullable.hpp  Object.h  OverflowException.h  SByte.h  Single.h  String.h  SystemException.h  (+7 more)
include/System/Collections/Concurrent/: ConcurrentDictionary.h  ConcurrentQueue.h  ConcurrentStack.h
include/System/Collections/Generic/: Dictionary.h  HashSet.h  LinkedList.h  List.h  Queue.h  (+4 more)
include/System/Coroutines/: Generator.hpp  GeneratorExtensions.hpp
include/System/GC/: GcControlBlock.hpp  GcPtr.hpp  GcRef.hpp  GcWeakPtr.hpp
include/System/IO/: BinaryReader.h  BinaryWriter.h  Directory.h  DirectoryInfo.h  DirectoryNotFoundException.h  DriveInfo.h  DriveType.h  EndOfStreamException.h  File.h  FileAccess.h  FileInfo.h  FileMode.h  FileNotFoundException.h  FileShare.h  FileStream.h  IOException.h  MemoryStream.h  Path.h  SearchOption.h  SeekOrigin.h  Stream.h  StreamReader.h  StreamWriter.h  Win32Helpers.h
include/System/Interfaces/: INotifyPropertyChanged.h
include/System/Linq/: Enumerable.hpp  EnumerableWrapper.hpp  IEnumerable.hpp  IEnumerator.hpp  Linq.hpp  LinqIterators.hpp  ListEnumerableAdapter.hpp
include/System/Reflection/: Activator.h  Assembly.h  Attribute.h  AttributeMacros.h  BindingFlags.h  CallingConventions.h  ConstructorInfo.h  FieldInfo.h  GenericTypeCache.hpp  MemberInfo.h  MemberTypes.h  MethodInfo.h  Module.h  ParameterInfo.h  PropertyInfo.h  ReflectionExceptions.h  StandardAttributes.h  Type.h  TypeExtensions.hpp  TypeRegistrar.h  TypeRegistration.h  typeof.hpp
include/System/Text/: ASCIIEncoding.h  Decoder.h  DecoderFallback.h  Encoder.h  EncoderFallback.h  Encoding.h  StringBuilder.h  UTF8Encoding.h
include/System/Threading/: ApartmentState.h  AsyncLocal.hpp  AsyncMethodBuilder.h  AutoResetEvent.h  Barrier.hpp  CancellationToken.h  CancellationToken.hpp  CancellationTokenRegistration.h  CancellationTokenSource.h  CountdownEvent.hpp  Delegates.hpp  Enums.hpp  EventWaitHandle.h  Interlocked.h  ManualResetEvent.h  ManualResetEventSlim.h  Monitor.h  Mutex.h  ReaderWriterLockSlim.h  ReaderWriterLockSlim.hpp  Semaphore.h  SemaphoreSlim.h  SpinLock.h  SpinWait.h  Structures.hpp  SynchronizationContext.h  Task.hpp  TaskCompletionSource.hpp  Thread.h  ThreadLocal.hpp  ThreadPool.h  ThreadPoolSynchronizationContext.h  ThreadingDelegates.h  Timer.h  Volatile.h  Volatile.hpp  WaitHandle.h
include/System/Xml/: MockDependencies.h  System.Xml.h  XmlAttribute.h  XmlCDataSection.h  XmlComment.h  XmlDeclaration.h  XmlDocument.h  XmlElement.h  XmlException.h  XmlNode.h  XmlNodeList.h  XmlNodeType.h  XmlReader.h  XmlReaderSettings.h  XmlText.h  XmlTextReader.h  XmlTextWriter.h  XmlWriter.h  XmlWriterSettings.h
src/Base/: ApplicationException.cpp  ArgumentException.cpp  ArgumentNullException.cpp  ArgumentOutOfRangeException.cpp  CMakeLists.txt  DateTime.cpp  DateTimeOffset.cpp  Decimal.cpp  Delegate.cpp  DelegateReflection.cpp  DivideByZeroException.cpp  Enum.cpp  Exception.cpp  FormatException.cpp  GC.cpp  Guid.cpp  IndexOutOfRangeException.cpp  IntPtr.cpp  InvalidOperationException.cpp  NotImplementedException.cpp  NotSupportedException.cpp  NullReferenceException.cpp  Object.cpp  OverflowException.cpp  String.cpp  SystemException.cpp  TimeSpan.cpp  UIntPtr.cpp
src/Base/Coroutines/: GeneratorImplementations.cpp.bak
src/Base/GC/: GcControlBlock.cpp  GcPtr.cpp  GcWeakPtr.cpp
src/Base/Runtime/CompilerServices/: SynchronizationContext.cpp
src/Base/Text/: ASCIIEncoding.cpp  Encoding.cpp  StringBuilder.cpp  UTF8Encoding.cpp
src/Base/Text/RegularExpressions/: Regex.cpp
src/System/Drawing/: DIRECTX_BACKEND_IMPLEMENTATION.md  GDIPLUS_BACKEND_INTEGRATION.md  GDI_PLUS_IMPLEMENTATION_SUMMARY.md
src/System/Threading/: AsyncLocal.cpp  Barrier.cpp  CancellationToken.cpp  CountdownEvent.cpp  ReaderWriterLockSlim.cpp  Task.cpp  TaskCompletionSource.cpp  ThreadLocal.cpp
tests/: AsyncLocalTests.cpp  BarrierTests.cpp  CMakeLists.txt  CancellationTokenTests.cpp  CountdownEventTests.cpp  ReaderWriterLockSlimTests.cpp  TaskTests.cpp  TestRunner.cpp  ThreadLocalTests.cpp
(+51 files in other folders)
